# mipt-cv

task2/: main.cpp
task3/: CMakeLists.txt  main.cpp
task5/: Task3.ipynb
